{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 27,
  "lineage": "de81b65e-efba-1899-fe2f-5c674902b159",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:834397118761:instance/i-048c420eee14314a7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048c420eee14314a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5c140dae1b746fb",
            "private_dns": "ip-10-0-1-172.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de0c5424a7763cf7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a688a1bab7ca84b",
            "tags": {
              "Name": "my-vpc-instance"
            },
            "tags_all": {
              "Name": "my-vpc-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fe9ce3089f60fde"
            ]
          },
          "dependencies": [
            "aws_security_group.gfg-sg-b10",
            "aws_subnet.gfg-subnet-b10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gfg-ig-b10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:internet-gateway/igw-0e377c5fb41ae0893",
            "id": "igw-0e377c5fb41ae0893",
            "owner_id": "834397118761",
            "tags": {
              "Name": "My Internet Gateway"
            },
            "tags_all": {
              "Name": "My Internet Gateway"
            },
            "vpc_id": "vpc-0c287b79591b22a26"
          },
          "dependencies": [
            "aws_vpc.gfg-vpc-b10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gfg-rt-b10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:route-table/rtb-0709c4eccb75160b7",
            "id": "rtb-0709c4eccb75160b7",
            "owner_id": "834397118761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e377c5fb41ae0893",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My Route Table"
            },
            "tags_all": {
              "Name": "My Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c287b79591b22a26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gfg-ig-b10",
            "aws_vpc.gfg-vpc-b10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gfg-ta-b10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8ed64843510058",
            "route_table_id": "rtb-0709c4eccb75160b7",
            "subnet_id": "subnet-07a688a1bab7ca84b"
          },
          "dependencies": [
            "aws_internet_gateway.gfg-ig-b10",
            "aws_route_table.gfg-rt-b10",
            "aws_subnet.gfg-subnet-b10",
            "aws_vpc.gfg-vpc-b10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gfg-sg-b10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:security-group/sg-09fe9ce3089f60fde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fe9ce3089f60fde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "gfg-sg-b10",
            "name_prefix": "",
            "owner_id": "834397118761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My Security Group"
            },
            "tags_all": {
              "Name": "My Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c287b79591b22a26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gfg-vpc-b10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gfg-subnet-b10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:subnet/subnet-07a688a1bab7ca84b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a688a1bab7ca84b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834397118761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My Subnet"
            },
            "tags_all": {
              "Name": "My Subnet"
            },
            "vpc_id": "vpc-0c287b79591b22a26"
          },
          "dependencies": [
            "aws_vpc.gfg-vpc-b10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gfg-vpc-b10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:834397118761:vpc/vpc-0c287b79591b22a26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b63fbd707183e74e",
            "default_route_table_id": "rtb-056adbe08c897ad60",
            "default_security_group_id": "sg-05d03348387095aa4",
            "dhcp_options_id": "dopt-0d49c24fa63560924",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c287b79591b22a26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056adbe08c897ad60",
            "owner_id": "834397118761",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}